# Modal_Object_Library

./: Max SDK.webloc  README.md
max-sdk/source/basics/modal_change/: CMakeCache.txt  CMakeLists.txt  cmake_install.cmake  modal_change.cpp
max-sdk/source/basics/modal_change/CMakeScripts/: ReRunCMake.make
max-sdk/source/basics/modal_change/modal_change.build/Debug/ALL_BUILD.build/: Script-925D9A40540B2B588ABEC8B8.sh
max-sdk/source/basics/modal_change/modal_change.build/Debug/ZERO_CHECK.build/: Script-252B8BCFA3972910F1ADBA30.sh
max-sdk/source/basics/modal_change/modal_change.build/Debug/modal_change.build/: Script-E140B14C5434636B3F0C0245.sh
max-sdk/source/basics/modal_change/modal_change.build/Debug/modal_change.build/Objects-normal/arm64/: modal_change.LinkFileList
max-sdk/source/basics/modal_change/modal_change.build/Debug/modal_change.build/Objects-normal/arm64/Binary/: modal_change
max-sdk/source/basics/modal_change/modal_change.build/Debug/modal_change.build/Objects-normal/x86_64/: modal_change.LinkFileList  modal_change.d  modal_change.dia
max-sdk/source/basics/modal_change/modal_change.build/Debug/modal_change.build/Objects-normal/x86_64/Binary/: modal_change
max-sdk/source/basics/modal_change/modal_change.xcodeproj/: project.pbxproj
max-sdk/source/basics/modal_change/modal_change.xcodeproj/project.xcworkspace/xcuserdata/music.xcuserdatad/: UserInterfaceState.xcuserstate
max-sdk/source/basics/modal_change/modal_change.xcodeproj/xcuserdata/music.xcuserdatad/xcschemes/: xcschememanagement.plist
max-sdk/source/basics/modal_triad/: CMakeCache.txt  (+3 more)
(+31 files in other folders)
